package main.java.fr.enseeiht.lbs.model.world;

/**
 * Types d'éléments de terrain.
 */
public enum WorldElement {
	PLAIN, DESERT, WATER, FOREST, LAVA, SNOW, ROCK
}